fixed this horizontal scroll thing that was bugging me on the home page

--- a/themes/the-dream-bed/css/custom.css
+++ b/themes/the-dream-bed/css/custom.css
@@ -1189,7 +1189,7 @@ body {
 }
 
 .home-bed-options h2 {
-	font-size: 2.857em;
+	font-size: 1.857em;
 	color: #808284;	
 	margin: 0 0 30px;
 }
@@ -1254,6 +1254,10 @@ body {
 
 .call-us-now a:hover {
 	text-decoration: none;
+}
+
+.dream-it-forward-jumbo h1 {
+	font-size: 1.857em;
 }
 
 }
@@ -1378,6 +1382,10 @@ body {
 	padding: 16px 26px;
 	font-size: 40px;
 	background: url(../images/bg-callout-number@2x.png) center no-repeat transparent;
+}
+
+.home-bed-options h2 {
+	font-size: 2.857em;
 }
 
 .giving .box img.block {
